--- a/Dayu Web/index.html
+++ b/Dayu Web/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <link
 </head>
 <body>
     <div class="title">
@@ -13,10 +12,14 @@
 
 <h1>Dayu Ouyang</h1>
 <main>
-    This is main element
-    <div class="square a"> i am a square</div> 
-    <div class="square b"> i am absolutely positioned</div>
-    <div class="square c">i am fixed square</div>
+    <div class="topnav">
+        <div>My projects</div>
+        <div>Say Hi</div>
+    </div>
+    <div class="square a">project 1</div> 
+    <div class="square b">project 2</div>
+    <div class="square c">project 3</div>
+
 </main>
 
 <footer>
